--- a/index.html
+++ b/index.html
@@ -1,18 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ar" dir="rtl">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Labyrinth of Memories</title>
+    <title>متاهة الذكريات</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700&family=Playfair+Display:ital,wght@0,500;0,700;1,500&display=swap"
+        href="https://fonts.googleapis.com/css2?family=El+Messiri:wght@400..700&family=Tajawal:wght@200;300;400;500;700;800;900&display=swap"
         rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="Images/sbs-logo.webp">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <!-- Audio Elements -->
+    <audio id="bg-audio" src="Audios/bgsound.m4a" loop></audio>
+    <audio id="bonus-audio" src="Audios/bonus.mp3"></audio>
+
     <!-- Background Image Area (Full Screen)-->
     <div id="background-image-container">
         <!-- Images injected here dynamically -->
@@ -34,7 +40,7 @@
             <div class="stat"><span class="icon">🧠</span> <span id="sanity-value">100</span></div>
             <div class="stat"><span class="icon">💰</span> <span id="gold-value">1000</span></div>
             <div class="inventory" id="inventory-container">
-                <span class="inventory-title">Inventory:</span>
+                <span class="inventory-title">المخزون:</span>
                 <span id="inventory-list"></span>
             </div>
             <div id="toast-container"></div>
@@ -44,8 +50,8 @@
         <main id="main-content">
             <!-- Story Text Area -->
             <div id="story-container" class="message-box">
-                <h1 id="scene-title">The Garden of Oblivion</h1>
-                <p id="story-text">You wake up with the overwhelming scent of white roses...</p>
+                <h1 id="scene-title">حديقة النسيان</h1>
+                <p id="story-text">تفتح عينيك بصعوبة على ضوء أبيض ساطع ولاذع...</p>
             </div>
 
             <!-- Choices Area -->
